cpufreq: add a new governor, Ironactive
this is a interactive base cpugovernor, which is actually made by @Neobuddy89, well
he knows nothing about that. So let's explain it: Samsung made some changes to the stock
interactive governor, so if I now try to update to CAF, this wont work at all. Neobuddy
already made so much changes to his "stock" interactive governor, it could be an own one!
So I renamed this governor, that I can keep interactie and thisone as well. Hope nobody minds about this project
I'm doing here.

Signed-off-by: Tkkg1994 <luca.grifo@outlook.com>

--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -193,6 +193,14 @@ config CPU_FREQ_DEFAULT_GOV_ALUCARD
           It has been known to be battery friendly without sacrificing much performance. If unsure have a look at the help section of the
 	  driver. Fallback governor will be the performance governor.
 
+config CPU_FREQ_DEFAULT_GOV_IRONACTIVE
+	bool "ironactive"
+	select CPU_FREQ_GOV_IRONACTIVE
+	help
+	  Use the CPUFreq governor 'ironactive' as default. This cpugovernor
+	  is based on the 'interactive' governor with many changes made by
+	  CAF.
+
 endchoice
 
 config CPU_FREQ_GOV_PERFORMANCE
@@ -365,7 +373,6 @@ config CPU_FREQ_GOV_BIOSHOCK
 	help
 	  'bioshock' - More aggressive version of conservative
 
-
 config CPU_FREQ_GOV_ALUCARD
 	tristate "'alucard' cpufreq governor"
 	depends on CPU_FREQ
@@ -388,7 +395,22 @@ config CPU_FREQ_GOV_ALUCARD
 
 	  If in doubt, say N.
 
+config CPU_FREQ_GOV_IRONACTIVE
+	tristate "'ironactive' cpufreq policy governor"
+	help
+	  'ironactive' - This driver adds a dynamic cpufreq policy governor
+	  designed for latency-sensitive workloads.
 
+	  This governor attempts to reduce the latency of clock
+	  increases so that the system is more responsive to
+	  ironactive workloads. Based on 'interactive' governor
+	  with many changes compared to our stock 'interactive'
+	  governor we have from samsung. Mainly CAF changes.
+
+	  To compile this driver as a module, choose M here: the
+	  module will be called cpufreq_ironactive.
+
+	  If in doubt, say N.
 
 config CPU_BOOST
 	tristate "Event base short term CPU freq boost"
