defconfig: Enable CRYPTO_CRC32_ARM64/HID_FIIO and optimize RCU

--- a/arch/arm64/configs/bullhead_defconfig
+++ b/arch/arm64/configs/bullhead_defconfig
@@ -43,6 +43,8 @@ CONFIG_ADRENO_IDLER=y
 CONFIG_POWERSUSPEND=y
 CONFIG_ZEN_INTERACTIVE=y
 CONFIG_QUICK_WAKEUP=y
+CONFIG_HID_FIIO=y
+CONFIG_CRYPTO_CRC32_ARM64=y
 
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -3908,8 +3910,8 @@ CONFIG_FRAME_POINTER=y
 # CONFIG_PROVE_RCU_DELAY is not set
 # CONFIG_SPARSE_RCU_POINTER is not set
 # CONFIG_RCU_TORTURE_TEST is not set
-CONFIG_RCU_CPU_STALL_TIMEOUT=21
-CONFIG_RCU_CPU_STALL_VERBOSE=y
+CONFIG_RCU_CPU_STALL_TIMEOUT=60
+# CONFIG_RCU_CPU_STALL_VERBOSE is not set
 # CONFIG_RCU_CPU_STALL_INFO is not set
 # CONFIG_RCU_TRACE is not set
 # CONFIG_BACKTRACE_SELF_TEST is not set
