--- a/arch/arm64/configs/bullhead_defconfig
+++ b/arch/arm64/configs/bullhead_defconfig
@@ -45,6 +45,11 @@ CONFIG_ZEN_INTERACTIVE=y
 CONFIG_QUICK_WAKEUP=y
 CONFIG_HID_FIIO=y
 CONFIG_CRYPTO_CRC32_ARM64=y
+CONFIG_UKSM=y
+CONFIG_KSM=y
+CONFIG_ZPOOL=y
+CONFIG_FRONTSWAP=y
+CONFIG_ZSWAP=y
 
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -404,7 +409,6 @@ CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 # CONFIG_TRANSPARENT_HUGEPAGE is not set
 CONFIG_CROSS_MEMORY_ATTACH=y
 CONFIG_CLEANCACHE=y
-# CONFIG_FRONTSWAP is not set
 # CONFIG_USE_USER_ACCESSIBLE_TIMERS is not set
 # CONFIG_ZBUD is not set
 CONFIG_BALANCE_ANON_FILE_RECLAIM=y
