--- a/arch/arm64/configs/bullhead_defconfig
+++ b/arch/arm64/configs/bullhead_defconfig
@@ -50,6 +50,12 @@ CONFIG_KSM=y
 CONFIG_ZPOOL=y
 CONFIG_FRONTSWAP=y
 CONFIG_ZSWAP=y
+CONFIG_HAVE_KERNEL_GZIP=y
+CONFIG_HAVE_KERNEL_LZ4=y
+CONFIG_HAVE_KERNEL_LZMA=y
+CONFIG_HAVE_KERNEL_LZO=y
+CONFIG_HAVE_KERNEL_XZ=y
+CONFIG_KERNEL_LZ4=y
 
 CONFIG_ARM64=y
 CONFIG_64BIT=y
