deconfig: Enable ALUCARD gov

--- a/arch/arm64/configs/bullhead_defconfig
+++ b/arch/arm64/configs/bullhead_defconfig
@@ -61,6 +61,7 @@ CONFIG_F2FS_FS_XATTR=y
 CONFIG_F2FS_FS_POSIX_ACL=y
 CONFIG_F2FS_FS_SECURITY=y
 CONFIG_F2FS_FS_ENCRYPTION=y
+CONFIG_CPU_FREQ_GOV_ALUCARD=y
 
 CONFIG_ARM64=y
 CONFIG_64BIT=y
